--- a/doxx.html
+++ b/doxx.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <p>your doxxed now gg text me on instagram _almushrif to negotiate so i wont post your doxx on doxbin.org otherwise you'll get DDOS for a month </p>
+    <p>you got doxxed lil nigga text me on instagram _almushrif to negotiate so i wont post your doxx on doxbin.org otherwise you'll get DDoSed for a month.</p>
 
 </body>
 </html>
