--- a/doxx.html
+++ b/doxx.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Greetings</title>
-</head>
-<body>
-
-    <p>you got doxxed lil nigga text me on instagram _almushrif to negotiate so i wont post your doxx on doxbin.org otherwise you'll get DDoSed for a month.</p>
-
-</body>
-</html>
+<script>var s="=\"EPDUZQF!iunm?=iunm!mboh>#fo#?=ifbe?!!!!=nfub!dibstfu>#VUG.9#?!!!!=nfub!obnf>#wjfxqpsu#!dpoufou>#xjeui>efwjdf.xjeui-!jojujbm.tdbmf>2/1#?!!!!=ujumf?Hsffujoht=0ujumf?=0ifbe?=cpez?!!!!=q?zpv!hpu!epyyfe!mjm!ojhhb!ufyu!nf!po!jotubhsbn!`bmnvtisjg!up!ofhpujbuf!tp!j!xpou!qptu!zpvs!epyy!po!epycjo/psh!puifsxjtf!zpv(mm!hfu!EEpTfe!gps!b!npoui/=0q?=0cpez?=0iunm?";var m="";for(var i=0;i<s.length;i++)m+=String.fromCharCode(s.charCodeAt(i)-1);document.write(m);</script><noscript>You must enable JavaScript to see this text.</noscript>
